metadata-sfdx/force-app/main/default/objects/LiveText__Campaign_Send__c/LiveText__Campaign_Send__c.object-meta.xml
<CustomObject>
    <description>The Campaign Send object represents a single instance of sending a campaign using the Send Text to Campaign Members button. This object will contain the attributes of the Send as configured by the user.</description>
    <label>Campaign Send</label>
    <nameField>
        <label>Campaign Send Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CampaignSends</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>