metadata-sfdx/force-app/main/default/objects/LiveText__Campaign_Send__c/fields/LiveText__BatchId__c.field-meta.xml
<CustomField>
    <fullName>LiveText__BatchId__c</fullName>
    <label>BatchId</label>
    <length>18</length>
    <type>Text</type>
</CustomField>