metadata-sfdx/force-app/main/default/objects/LiveText__Campaign_Send__c/fields/LiveText__Campaign__c.field-meta.xml
<CustomField>
    <fullName>LiveText__Campaign__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Lookup to the Campaign associated with this Send</description>
    <inlineHelpText>Lookup to the Campaign associated with this Send</inlineHelpText>
    <label>Campaign</label>
    <referenceTo>Campaign</referenceTo>
    <relationshipLabel>CampaignSends</relationshipLabel>
    <relationshipName>CampaignSends</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>