metadata-sfdx/force-app/main/default/objects/LiveText__Campaign_Send__c/fields/LiveText__EndTime__c.field-meta.xml
<CustomField>
    <fullName>LiveText__EndTime__c</fullName>
    <description>Date and Time the last batch of the send completed.</description>
    <inlineHelpText>Date and Time the last batch of the send completed.</inlineHelpText>
    <label>EndTime</label>
    <type>DateTime</type>
</CustomField>