metadata-sfdx/force-app/main/default/objects/LiveText__Campaign_Send__c/fields/LiveText__ErrorStatus__c.field-meta.xml
<CustomField>
    <fullName>LiveText__ErrorStatus__c</fullName>
    <description>Campaign Member status if message is not successfully sent or member is deemed a duplicate.</description>
    <inlineHelpText>Campaign Member status if message is not successfully sent or member is deemed a duplicate.</inlineHelpText>
    <label>ErrorStatus</label>
    <length>255</length>
    <type>Text</type>
</CustomField>