metadata-sfdx/force-app/main/default/objects/LiveText__Campaign_Send__c/fields/LiveText__Message__c.field-meta.xml
<CustomField>
    <fullName>LiveText__Message__c</fullName>
    <description>The message to be sent to all eligible campaign members</description>
    <inlineHelpText>The message to be sent to all eligible campaign members</inlineHelpText>
    <label>Message</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>