metadata-sfdx/force-app/main/default/objects/LiveText__Campaign_Send__c/fields/LiveText__OptoutStatus__c.field-meta.xml
<CustomField>
    <fullName>LiveText__OptoutStatus__c</fullName>
    <description>Campaign Member status if member opts out.</description>
    <inlineHelpText>Campaign Member status if member opts out.</inlineHelpText>
    <label>OptoutStatus</label>
    <length>255</length>
    <type>Text</type>
</CustomField>