metadata-sfdx/force-app/main/default/objects/LiveText__Campaign_Send__c/fields/LiveText__ResponseStatus__c.field-meta.xml
<CustomField>
    <fullName>LiveText__ResponseStatus__c</fullName>
    <description>Campaign Member status if member responds.</description>
    <inlineHelpText>Campaign Member status if member responds.</inlineHelpText>
    <label>ResponseStatus</label>
    <length>255</length>
    <type>Text</type>
</CustomField>