metadata-sfdx/force-app/main/default/objects/LiveText__Campaign_Send__c/fields/LiveText__StartTime__c.field-meta.xml
<CustomField>
    <fullName>LiveText__StartTime__c</fullName>
    <description>Date and Time the first batch of the send was started.</description>
    <inlineHelpText>Date and Time the first batch of the send was started.</inlineHelpText>
    <label>StartTime</label>
    <type>DateTime</type>
</CustomField>