metadata-sfdx/force-app/main/default/objects/LiveText__Campaign_Send__c/fields/LiveText__SuccessStatus__c.field-meta.xml
<CustomField>
    <fullName>LiveText__SuccessStatus__c</fullName>
    <description>Campaign Member status if message is successfully sent.</description>
    <inlineHelpText>Campaign Member status if message is successfully sent.</inlineHelpText>
    <label>SuccessStatus</label>
    <length>255</length>
    <type>Text</type>
</CustomField>