metadata-sfdx/force-app/main/default/objects/LiveText__Campaign_Send__c/fields/LiveText__SupportNumber__c.field-meta.xml
<CustomField>
    <fullName>LiveText__SupportNumber__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>The number to send messages from</description>
    <inlineHelpText>The number to send messages from</inlineHelpText>
    <label>SupportNumber</label>
    <referenceTo>LiveText__LiveText_Number__c</referenceTo>
    <relationshipLabel>CampaignSends</relationshipLabel>
    <relationshipName>CampaignSends</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>